Bug 484615 - Error adding feed from https://www.qt.io/blog
Summary: Error adding feed from https://www.qt.io/blog
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-27 19:18 UTC by equeim
Modified: 2024-03-29 12:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description equeim 2024-03-27 19:18:35 UTC
SUMMARY
Adding feed from https://www.qt.io/blog fails with "Feed not found error".
In terminal output following error is printed:
>"Expected '-' or 'DOCTYPE', but got '[a-zA-Z]'." on line 1

STEPS TO REPRODUCE
1. Add feed from https://www.qt.io/blog URL

OBSERVED RESULT
Error.

EXPECTED RESULT
No error.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Comment 1 Laurent Montel 2024-03-28 07:12:46 UTC
It's not a feed url

feed url is https://www.qt.io/blog/rss.xml

=> not a bug.
Comment 2 equeim 2024-03-28 20:19:15 UTC
Should it work via RSS autodiscovery (https://www.rssboard.org/rss-autodiscovery)? For example adding "https://planet.gentoo.org" URL in Akregator adds RSS feed with "https://planet.gentoo.org/rss20.xml" URL. It also works for many other sites, but not for this specific URL even though its HTML does contain a "link" element.
Comment 3 Laurent Montel 2024-03-29 07:05:22 UTC
Indeed there is a problem in syndication lib.
Regexp is not ok.
Comment 4 Laurent Montel 2024-03-29 12:27:04 UTC
Git commit 7e6caaabb64f74a654db722e4efaae9e43a1cbbe by Laurent Montel.
Committed on 29/03/2024 at 12:26.
Pushed by mlaurent into branch 'master'.

Fix bug 484615: Error adding feed from https://www.qt.io/blog

A  +4156 -0    autotests/feeds/bug-484615.txt
A  +6342 -0    autotests/feeds/bug-test-gentoo.txt
M  +6    -0    autotests/loaderutiltest.cpp
M  +39   -28   src/loaderutil.cpp

https://invent.kde.org/frameworks/syndication/-/commit/7e6caaabb64f74a654db722e4efaae9e43a1cbbe