Fix bug 484615: Error adding feed from https://www.qt.io/blog

BUG: 484615